Add Youtube video to support page and style with responsive code

--- a/support.html
+++ b/support.html
@@ -47,7 +47,7 @@
         <div class="page-info" id="support-title">
             <h1>Support Resources</h1>
             <p>Below you will find some useful links to other organisations that can help to guide and provide advice with any struggles in your parenting journey</p>
-            <a class="button top-button" href="">Try 5 minutes of meditation!</a>
+            <a class="button top-button" href="#wellbeing-video">Try 5 minutes of meditation!</a>
         </div>
     </section>
 
@@ -85,7 +85,7 @@
         <div class="flex-container support-text">
             <h2>Mindfulness and Wellbeing</h2>
             <p>It is so important to look after yourself. Practicing mindfulness can help us not to become overwhelmed and to be more present in the moment. It can help us relax, sleep, and manage our feelings in a more gentle way</p>
-            <p>Try out a short breathing exercise at the <a href="">bottom of this page</a></p>
+            <p>Try out a short breathing exercise at the <a href="#wellbeing-video">bottom of this page</a></p>
             <i class="fa-solid fa-sun"></i>
             <div class="flex-container support-links">
                 <a href="https://www.headspace.com/mindfulness/mindful-parenting" target="_blank" rel="noopener" aria-label="visit Headspace website (opens in new tag)">Headspace - Mindful Parenting</a>
@@ -97,8 +97,8 @@
     </section>
 
     <section>
-        <div>
-            <iframe>Youtube Video</iframe>
+        <div class="iframe-container" id="wellbeing-video">
+            <iframe title="A short meditation video posted by Headspace on YouTube" width="560" height="315" src="https://www.youtube.com/embed/cEqZthCaMpo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
 
