Add core structure to contact page

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Mama & Cub</title>
+    <title>Mama & Cub - Contact</title>
 </head>
 
 <body>
@@ -42,6 +42,29 @@
             </ul>
         </nav>
     </header>
+
+    <section>
+        <div class="page-info">
+            <h1>Contact Us</h1>
+        </div>
+    </section>
+
+    <section>
+        <form>
+
+        </form>
+    </section>
+
+    <section>
+        <p>Contact details</p>
+        <address></address>
+    </section>
+
+    <section>
+        <div>
+            <iframe>Google Maps</iframe>
+        </div>
+    </section>
 
     <footer>
         <div class="flex-container" id="footer">
