--- a/contact.html
+++ b/contact.html
@@ -50,14 +50,54 @@
     </section>
 
     <section>
-        <form>
-
+        <form class="form">
+            <div class="flex-container flex-form">
+                <label for="name">Name</label>
+                <input type="text" id="first-name" name="first-name" required>
+            </div>
+            <div class="flex-container flex-form">
+                <label for="email">Email Address</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="flex-container flex-form">
+                <p>What is your primary reason for contacting us today?</p>
+            </div>
+            <div class="flex-container flex-row">
+                <input type="radio" id="date-booking" name="contact-reason" value="Activity enquiry/booking" required>
+                <label for="date-booking">Upcoming Date</label>
+            </div>
+            <div class="flex-container flex-row">
+                <input type="radio" id="suggestion" name="contact-reason" value="Suggest an activity or location">
+                <label for="suggestion">Suggestion</label>
+            </div>
+            <div class="flex-container flex-row">
+                <input type="radio" id="other" name="contact-reason" value="Other">
+                <label for="other">Other</label>
+            </div>
+            <div class="flex-container flex-form">
+                <label for="message">Your Message</label>
+                <textarea id="message" placeholder="Start typing.."></textarea>
+            </div>
+            <div class="flex-container flex-button">
+                <input type="submit" value="Send" class="button top-button">
+                <input type="reset" value="Clear Form" class="button top-button">
+            </div>
         </form>
     </section>
 
     <section>
-        <p>Contact details</p>
-        <address></address>
+        <p><i class="fa-solid fa-envelope"></i><br>
+            Contact us directly by emailing<br>
+            <a href="malito:hello@mumaandcub.org">hello@mumaandcub.org</a>
+        </p>
+        <address>
+            <i class="fa-solid fa-location-dot"></i><br>
+                Our regular meet up spot<br>
+                can be found at:<br>
+                Playtime Cafe<br>
+                1 Happy Hill<br>
+                Exeter, Devon
+        </address>
     </section>
 
     <section>
