--- a/contact.html
+++ b/contact.html
@@ -50,35 +50,35 @@
     </section>
 
     <section>
-        <form class="form">
-            <div class="flex-container flex-form">
+        <form>
+            <div class="flex-container flex-form-item">
                 <label for="name">Name</label>
                 <input type="text" id="first-name" name="first-name" required>
             </div>
-            <div class="flex-container flex-form">
+            <div class="flex-container flex-form-item">
                 <label for="email">Email Address</label>
                 <input type="email" id="email" name="email" required>
             </div>
-            <div class="flex-container flex-form">
+            <div class="flex-container flex-form-item">
                 <p>What is your primary reason for contacting us today?</p>
             </div>
-            <div class="flex-container flex-row">
+            <div class="flex-container flex-row-item">
                 <input type="radio" id="date-booking" name="contact-reason" value="Activity enquiry/booking" required>
                 <label for="date-booking">Upcoming Date</label>
             </div>
-            <div class="flex-container flex-row">
+            <div class="flex-container flex-row-item">
                 <input type="radio" id="suggestion" name="contact-reason" value="Suggest an activity or location">
                 <label for="suggestion">Suggestion</label>
             </div>
-            <div class="flex-container flex-row">
+            <div class="flex-container flex-row-item">
                 <input type="radio" id="other" name="contact-reason" value="Other">
                 <label for="other">Other</label>
             </div>
-            <div class="flex-container flex-form">
+            <div class="flex-container flex-form-item">
                 <label for="message">Your Message</label>
                 <textarea id="message" placeholder="Start typing.."></textarea>
             </div>
-            <div class="flex-container flex-button">
+            <div class="flex-container flex-button-item">
                 <input type="submit" value="Send" class="button top-button">
                 <input type="reset" value="Clear Form" class="button top-button">
             </div>
