Make minor update to text on support page, and add break to playtime cafe date blocks to keep text fixed on hover

--- a/dates.html
+++ b/dates.html
@@ -84,7 +84,8 @@
             <div class="grid-item icon-container">
                 <h2>Playtime Cafe</h2>
                 <h2>Tuesday 17th January, 9:30am</h2>
-                <p>Our regular monthly meet ups are back! Join us at the Playtime Cafe in Exeter on Tuesday morning</p>
+                <p>Our regular monthly meet ups are back! Join us at the Playtime Cafe<br>
+                    in Exeter on Tuesday morning</p>
                 <p>£1 per child</p>
                 <p>Pre-booking advised</p>
                 <div class="icon-item">
@@ -105,7 +106,8 @@
             <div class="grid-item icon-container">
                 <h2>Playtime Cafe</h2>
                 <h2>Tuesday 21st February, 9:30am</h2>
-                <p>Our regular monthly meet ups are back! Join us at the Playtime Cafe in Exeter on Tuesday morning</p>
+                <p>Our regular monthly meet ups are back! Join us at the Playtime Cafe<br>
+                    in Exeter on Tuesday morning</p>
                 <p>£1 per child</p>
                 <p>Pre-booking advised</p>
                 <div class="icon-item">
@@ -115,7 +117,8 @@
             <div class="grid-item icon-container">
                 <h2>Playtime Cafe</h2>
                 <h2>Tuesday 14th March, 9:30am</h2>
-                <p>Our regular monthly meet ups are back! Join us at the Playtime Cafe in Exeter on Tuesday morning</p>
+                <p>Our regular monthly meet ups are back! Join us at the Playtime Cafe<br>
+                    in Exeter on Tuesday morning</p>
                 <p>£1 per child</p>
                 <p>Pre-booking advised as numbers are quite limited</p>
                 <div class="icon-item">
@@ -135,7 +138,8 @@
             <div class="grid-item icon-container">
                 <h2>Playtime Cafe</h2>
                 <h2>Tuesday 11th April, 9:30am</h2>
-                <p>Our regular monthly meet ups are back! Join us at the Playtime Cafe in Exeter on Tuesday morning</p>
+                <p>Our regular monthly meet ups are back! Join us at the Playtime Cafe<br>
+                    in Exeter on Tuesday morning</p>
                 <p>£1 per child</p>
                 <p>Pre-booking advised</p>
                 <div class="icon-item">
@@ -145,7 +149,8 @@
             <div class="grid-item icon-container">
                 <h2>Playtime Cafe</h2>
                 <h2>Tuesday 16th May, 9:30am</h2>
-                <p>Our regular monthly meet ups are back! Join us at the Playtime Cafe in Exeter on Tuesday morning</p>
+                <p>Our regular monthly meet ups are back! Join us at the Playtime Cafe<br>
+                    in Exeter on Tuesday morning</p>
                 <p>£1 per child</p>
                 <p>Pre-booking advised</p>
                 <div class="icon-item">
@@ -155,7 +160,8 @@
             <div class="grid-item icon-container">
                 <h2>Playtime Cafe</h2>
                 <h2>Tuesday 13th June, 9:30am</h2>
-                <p>Our regular monthly meet ups are back! Join us at the Playtime Cafe in Exeter on Tuesday morning</p>
+                <p>Our regular monthly meet ups are back! Join us at the Playtime Cafe<br>
+                    in Exeter on Tuesday morning</p>
                 <p>£1 per child</p>
                 <p>Pre-booking advised</p>
                 <div class="icon-item">
