--- a/support.html
+++ b/support.html
@@ -46,7 +46,7 @@
     <section>
         <div class="page-info" id="support-title">
             <h1>Support Resources</h1>
-            <p>Below you will find some useful links to other organisations that can help to guide and provide advice with any struggles in your parenting journey</p>
+            <p>Below you will find some useful links to other organisations that can help to guide you and provide advice with any struggles in your parenting journey</p>
             <a class="button top-button" href="#wellbeing-video">Try 5 minutes of meditation!</a>
         </div>
     </section>
@@ -54,7 +54,7 @@
     <section class="flex-container support-section">
         <div class="flex-container support-text">
             <h2>Breastfeeding Support</h2>
-            <p>Breastfeeding can come easily to some and be more difficult for others. Your first child might take to it immediately and your next might struggle. Whatever your journey may hold there are lots of support resources out there.</p>
+            <p>Breastfeeding can come easily to some and be more difficult for others. Your first child might take to it immediately and your next might struggle. Whatever your journey may hold there are a lot of support resources and groups available to help you.</p>
             <p>Here at Mama & Cub there is no judgement. We are firm believers that <em>fed</em> is best!</p>
             <i class="fa-solid fa-person-breastfeeding"></i>
             <div class="flex-container support-links">
