--- a/contact.html
+++ b/contact.html
@@ -49,59 +49,70 @@
         </div>
     </section>
 
-    <section>
-        <form>
-            <div class="flex-container flex-form-item">
-                <label for="name">Name</label>
-                <input type="text" id="first-name" name="first-name" required>
-            </div>
-            <div class="flex-container flex-form-item">
-                <label for="email">Email Address</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="flex-container flex-form-item">
-                <p>What is your primary reason for contacting us today?</p>
-            </div>
-            <div class="flex-container flex-row-item">
-                <input type="radio" id="date-booking" name="contact-reason" value="Activity enquiry/booking" required>
-                <label for="date-booking">Upcoming Date</label>
-            </div>
-            <div class="flex-container flex-row-item">
-                <input type="radio" id="suggestion" name="contact-reason" value="Suggest an activity or location">
-                <label for="suggestion">Suggestion</label>
-            </div>
-            <div class="flex-container flex-row-item">
-                <input type="radio" id="other" name="contact-reason" value="Other">
-                <label for="other">Other</label>
-            </div>
-            <div class="flex-container flex-form-item">
-                <label for="message">Your Message</label>
-                <textarea id="message" placeholder="Start typing.."></textarea>
-            </div>
-            <div class="flex-container flex-button-item">
-                <input type="submit" value="Send" class="button top-button">
-                <input type="reset" value="Clear Form" class="button top-button">
-            </div>
-        </form>
-    </section>
+    <section class="flex-container contact-section">
+        <div class="contact-item">
+            <form>
+                <div class="flex-container flex-form-item">
+                    <label for="name">Name</label>
+                    <input type="text" id="first-name" name="first-name" required>
+                </div>
+                <div class="flex-container flex-form-item">
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="flex-container flex-form-item">
+                    <p>What is your primary reason for contacting us today?</p>
+                </div>
+                <div class="flex-container flex-row-item">
+                    <input type="radio" id="date-booking" name="contact-reason" value="Activity enquiry/booking" required>
+                    <label for="date-booking">Upcoming Date</label>
+                </div>
+                <div class="flex-container flex-row-item">
+                    <input type="radio" id="suggestion" name="contact-reason" value="Suggest an activity or location">
+                    <label for="suggestion">Suggestion</label>
+                </div>
+                <div class="flex-container flex-row-item">
+                    <input type="radio" id="other" name="contact-reason" value="Other">
+                    <label for="other">Other</label>
+                </div>
+                <div class="flex-container flex-form-item">
+                    <label for="message">Your Message</label>
+                    <textarea id="message" placeholder="Start typing.."></textarea>
+                </div>
+                <div class="flex-container flex-button-item">
+                    <input type="submit" value="Send" class="button top-button">
+                    <input type="reset" value="Clear Form" class="button top-button">
+                </div>
+            </form>
+        </div>
 
-    <section>
-        <div class="contact-details">
-            <p><i class="fa-solid fa-envelope"></i><br>
-                Contact us directly by emailing<br>
-                <a href="malito:hello@mumaandcub.org">hello@mumaandcub.org</a>
-            </p>
-            <address>
-                <i class="fa-solid fa-location-dot"></i><br>
-                    Our regular meet up spot<br>
-                    can be found at:<br>
-                    Playtime Cafe<br>
-                    1 Happy Hill<br>
-                    Exeter, Devon
-            </address>
+        <div class="flex-container contact-item contact-details">
+            <div>
+                <p><i class="fa-solid fa-envelope"></i><br>
+                    Contact us directly by emailing<br>
+                    <a href="malito:hello@mumaandcub.org">hello@mumaandcub.org</a>
+                </p>
+                <p><i class="fa-brands fa-facebook-messenger"></i><br>
+                    Send us a<br>
+                    <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in new tag)">Facebook message</a>
+                </p>
+            </div>
+            <div>
+                <p><i class="fa-solid fa-phone"></i><br>
+                    Give us a call<br>
+                    <a href="tel:+447711223344">01234 123456</a>
+                </p>
+                <address>
+                    <i class="fa-solid fa-location-dot"></i><br>
+                        Playtime Cafe<br>
+                        1 Happy Hill<br>
+                        Exeter, Devon
+                </address>
+            </div>
         </div>
     </section>
 
+    
     <section>
         <div class="map-container">
             <iframe title="Exeter on Google Maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48778.650759895405!2d-3.548652650994783!3d50.72447726551613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486c52c4d4498da7%3A0xa976e3256bdfad1e!2sExeter!5e1!3m2!1sen!2suk!4v1667396062774!5m2!1sen!2suk" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
