Add core structure and text for thank you page after submitting a contact form

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
                 </p>
                 <p><i class="fa-brands fa-facebook-messenger"></i><br>
                     Send us a<br>
-                    <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in new tag)">Facebook message</a>
+                    <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in new tab)">Facebook message</a>
                 </p>
             </div>
             <div>
