--- a/index.html
+++ b/index.html
@@ -99,13 +99,12 @@
         <div class="flex-container" id="footer">
             <ul class="flex-container" id="footer-list">
                 <li>
-                    <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in new tag)">
+                    <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in new tab)">
                     <i class="fab fa-facebook"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="http://instagram.com" target="_blank"          rel="noopener" 
-                    aria-label="visit our facebook page (opens in new tag)">
+                    <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="visit our instagram page (opens in new tab)">
                     <i class="fab fa-instagram"></i>
                     </a>
                 </li>
