Add image and links to thank you page and style

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 
     <section class="flex-container contact-section">
         <div class="contact-item">
-            <form>
+            <form action="thankyou.html">
                 <div class="flex-container flex-form-item">
                     <label for="name">Name</label>
                     <input type="text" id="first-name" name="first-name" required>
