--- a/thankyou.html
+++ b/thankyou.html
@@ -43,12 +43,21 @@
         </nav>
     </header>
 
-    <section>
-        <img>
+    <section class="page-info">
+        <img id=thank-you-image src="assets/images/pexels-andrea-piacquadio-3755620 (1).jpg">
         <h1>Thank you for getting in touch!</h1>
-        <p>Your message has been successfully submitted and we'll be back in touch with shortly!</p>    
+        <p>Your message has been successfully submitted and we'll be back in touch with you shortly!</p> 
     </section>
 
+    <section class="page-info">
+        <p>Where would you like to go next?</p>
+        <ul id="nav-links-list">
+            <li><a class="button top-button" href="index.html">Home</a></li>
+            <li><a class="button top-button" href="dates.html">Dates</a></li>
+            <li><a class="button top-button" href="support.html">Support</a></li>
+            <li><a class="button top-button" href="contact.html">Contact</a></li>
+        </ul>
+    </section>
     <footer>
         <div class="flex-container" id="footer">
             <ul class="flex-container" id="footer-list">
