Add better alt descriptions to images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
 
     <section class="flex-container" id="top-section">
-        <img id="top-image" src="assets/images/girl-dollhouse.jpg" alt="Little girl smiling in playroom">
+        <img id="top-image" src="assets/images/girl-dollhouse.jpg" alt="A little girl smiles at the camera with her fists raised up in the air to show she is having fun. She is in a room with toys on a desk in front of her">
         <div class="flex-container" id="top-text">
             <h2>Join us at our next meet up</h2>
             <div class="flex-container" id="meet-ups">
@@ -74,7 +74,7 @@
             <p id="last-paragraph">If you have an activity or location that would make a great meet up please get in touch</p>
             <a class="button middle-button" href="contact.html">Make a suggestion!</a>
         </div>
-        <img id="middle-image" src="assets/images/play.jpg" alt="Children's alphabet blocks spell out the word 'play'">
+        <img id="middle-image" src="assets/images/play.jpg" alt="Children's wooden alphabet blocks spell out the word 'play' with each letter appearing on an individual block in a different colour">
     </section>
 
     <section class="flex-container" id="lower-section">
@@ -92,7 +92,7 @@
             </ul>
             <a class="button lower-button" href="support.html">Find out more</a>
         </div>
-        <img id="lower-image" src="assets/images/toddlers-blocks.jpg" alt="Two young children stack play blocks together">
+        <img id="lower-image" src="assets/images/toddlers-blocks.jpg" alt="A young girl in a red dress builds a tower of blocks with a little boy dressed in green dungarees. They are sat on the floor playing with the blocks">
     </section>
 
     <footer>
