--- a/support.html
+++ b/support.html
@@ -63,7 +63,7 @@
                 <a href="http://www.healthy-babies-uk.org/index.html" target="_blank" rel="noopener" aria-label="visit Healthy Babies UK website (opens in new tag)">Healthy Babies UK (based in Tiverton)</a>
             </div>
         </div>
-        <img src="assets/images/breastfeeding.jpg" alt="A woman sits on a stool and breastfeeds her baby">
+        <img src="assets/images/breastfeeding.jpg" alt="A black and white photo of a woman wearing jeans and a t-shirt sitting on a stool and breastfeeds her young baby">
     </section>
 
     <section class="flex-container support-section" id="mental-health">
@@ -93,7 +93,7 @@
                 <a href="https://www.nhs.uk/mental-health/self-help/guides-tools-and-activities/five-steps-to-mental-wellbeing/" target="_blank" rel="noopener" aria-label="visit NHS website (opens in new tag)">NHS - 5 Steps to Mental Wellbeing</a>
             </div>
         </div>
-        <img src="assets/images/meditationmum.jpg" alt="A mother and her two children meditating">
+        <img src="assets/images/meditationmum.jpg" alt="A mother and her two children sit next to eachother on a floor meditating. They are sitting in a burmese position with legs crossed and are in a big bright room">
     </section>
 
     <section>
