--- a/thankyou.html
+++ b/thankyou.html
@@ -44,7 +44,7 @@
     </header>
 
     <section class="page-info">
-        <img id=thank-you-image src="assets/images/pexels-andrea-piacquadio-3755620 (1).jpg">
+        <img id=thank-you-image src="assets/images/little-girl-phone.jpg" alt="a little girl dressed in a blue ballet outfit and wearing ballet shoes sits cross-legged on a desk playing with a mobile phone">
         <h1>Thank you for getting in touch!</h1>
         <p>Your message has been successfully submitted and we'll be back in touch with you shortly!</p> 
     </section>
