Add comments to html for clarity

--- a/contact.html
+++ b/contact.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A social group for parents and their babies based in Exeter, Devon">
-    <meta name="keywords" content="playgroup, mum and baby group, baby, parents, exeter, devon">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicon/site.webmanifest">
-    <link rel="stylesheet" href="assets/css/style.css">
+   <!-- meta tags -->
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="A social group for parents and their babies based in Exeter, Devon">
+   <meta name="keywords" content="playgroup, mum and baby group, baby, parents, exeter, devon">
+   
+   <!-- favicon -->
+   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+   <link rel="manifest" href="assets/favicon/site.webmanifest">
+  
+   <!-- css stylesheet -->
+   <link rel="stylesheet" href="assets/css/style.css">
+   
+   <!-- browser title -->
     <title>Mama & Cub - Contact</title>
 </head>
 
 <body>
-    <header>
-        <div class="flex-container" id="logo">
-            <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
-            <div class="flex-container" id="logo-text">
-                <h1 id="logo-name">
-                    <a href="index.html">Mama & Cub</a>
-                </h1>
-                <h2 id="tagline"><em>A social group for parents in Devon</em></h2>
-            </div>
+    <!-- logo, image and tagline -->
+    <div class="flex-container" id="logo">
+        <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
+        <div class="flex-container" id="logo-text">
+            <h1 id="logo-name">
+                <a href="index.html">Mama & Cub</a>
+            </h1>
+            <h2 id="tagline"><em>A social group for parents in Devon</em></h2>
         </div>
+    </div>
+
+    <!-- navigation bar -->
         <nav>
             <ul class="flex-container" id="navigation">
                 <li>
@@ -44,13 +53,16 @@
     </header>
 
     <section>
+        <!-- page title -->
         <div class="page-info">
             <h1>Contact Us</h1>
         </div>
     </section>
 
+    <!-- contact form and contact details section -->
     <section class="flex-container contact-section">
         <div class="contact-item">
+            <!-- FORM -->
             <form action="thankyou.html">
                 <div class="flex-container flex-form-item">
                     <label for="name">Name</label>
@@ -86,6 +98,7 @@
             </form>
         </div>
 
+        <!-- contact details -->
         <div class="flex-container contact-item contact-details">
             <div>
                 <p><i class="fa-solid fa-envelope"></i><br>
@@ -97,6 +110,7 @@
                     <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="visit our facebook page (opens in new tab)">Facebook message</a>
                 </p>
             </div>
+
             <div>
                 <p><i class="fa-solid fa-phone"></i><br>
                     Give us a call<br>
@@ -112,13 +126,14 @@
         </div>
     </section>
 
-    
+    <!-- Google map -->
     <section>
         <div class="map-container">
             <iframe title="Exeter on Google Maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48778.650759895405!2d-3.548652650994783!3d50.72447726551613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486c52c4d4498da7%3A0xa976e3256bdfad1e!2sExeter!5e1!3m2!1sen!2suk!4v1667396062774!5m2!1sen!2suk" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
+    <!-- footer -->
     <footer>
         <div class="flex-container" id="footer">
             <ul class="flex-container" id="footer-list">
