--- a/thankyou.html
+++ b/thankyou.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- meta tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A social group for parents and their babies based in Exeter, Devon">
     <meta name="keywords" content="playgroup, mum and baby group, baby, parents, exeter, devon">
+    
+    <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
+   
+    <!-- css stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+    
+    <!-- browser title -->
     <title>Mama & Cub - Submitted!</title>
 </head>
 
 <body>
-    <header>
-        <div class="flex-container" id="logo">
-            <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
-            <div class="flex-container" id="logo-text">
-                <h1 id="logo-name">
-                    <a href="index.html">Mama & Cub</a>
-                </h1>
-                <h2 id="tagline"><em>A social group for parents in Devon</em></h2>
-            </div>
+    <!-- logo, image and tagline -->
+    <div class="flex-container" id="logo">
+        <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
+        <div class="flex-container" id="logo-text">
+            <h1 id="logo-name">
+                <a href="index.html">Mama & Cub</a>
+            </h1>
+            <h2 id="tagline"><em>A social group for parents in Devon</em></h2>
         </div>
-        <nav>
+    </div>
+
+    <!-- navigation bar -->
             <ul class="flex-container" id="navigation">
                 <li>
                     <a href="index.html">Home</a>
@@ -43,12 +51,14 @@
         </nav>
     </header>
 
+    <!-- page information -->
     <section class="page-info">
         <img id=thank-you-image src="assets/images/little-girl-phone.jpg" alt="a little girl dressed in a blue ballet outfit and wearing ballet shoes sits cross-legged on a desk playing with a mobile phone">
         <h1>Thank you for getting in touch!</h1>
         <p>Your message has been successfully submitted and we'll be back in touch with you shortly!</p> 
     </section>
 
+    <!-- repeat of navigation links to redirect -->
     <section class="page-info">
         <p>Where would you like to go next?</p>
         <ul id="nav-links-list">
@@ -58,6 +68,8 @@
             <li><a class="button top-button" href="contact.html">Contact</a></li>
         </ul>
     </section>
+
+    <!-- footer -->
     <footer>
         <div class="flex-container" id="footer">
             <ul class="flex-container" id="footer-list">
