--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- meta tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A social group for parents and their babies based in Exeter, Devon">
     <meta name="keywords" content="playgroup, mum and baby group, baby, parents, exeter, devon">
+    
+    <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
+   
+    <!-- css stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+    
+    <!-- browser title -->
     <title>Mama & Cub</title>
 </head>
 
 <body>
     <header>
+        <!-- logo, image and tagline -->
         <div class="flex-container" id="logo">
             <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
             <div class="flex-container" id="logo-text">
@@ -25,6 +33,8 @@
                 <h2 id="tagline"><em>A social group for parents in Devon</em></h2>
             </div>
         </div>
+
+        <!-- navigation bar -->
         <nav>
             <ul class="flex-container" id="navigation">
                 <li>
@@ -43,6 +53,7 @@
         </nav>
     </header>
 
+    <!-- top section with next meet up info -->
     <section class="flex-container" id="top-section">
         <img id="top-image" src="assets/images/girl-dollhouse.jpg" alt="A little girl smiles at the camera with her fists raised up in the air to show she is having fun. She is in a room with toys on a desk in front of her">
         <div class="flex-container" id="top-text">
@@ -65,6 +76,7 @@
         </div>
     </section>
 
+    <!-- middle section with about us info -->
     <section class="flex-container" id="middle-section">
         <div class="flex-container" id="middle-text">
             <h2>About Mama & Cub</h2>
@@ -77,6 +89,7 @@
         <img id="middle-image" src="assets/images/play.jpg" alt="Children's wooden alphabet blocks spell out the word 'play' with each letter appearing on an individual block in a different colour">
     </section>
 
+    <!-- lower section with glimpse at support resource info -->
     <section class="flex-container" id="lower-section">
         <div id="lower-text">
             <h2>Taking care of <em>you</em></h2>
@@ -95,6 +108,7 @@
         <img id="lower-image" src="assets/images/toddlers-blocks.jpg" alt="A young girl in a red dress builds a tower of blocks with a little boy dressed in green dungarees. They are sat on the floor playing with the blocks">
     </section>
 
+    <!-- footer -->
     <footer>
         <div class="flex-container" id="footer">
             <ul class="flex-container" id="footer-list">
