Fix background colour missing on navigation bar on contact page. Header opening tag was missing - added

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
     </div>
 
     <!-- navigation bar -->
+    <header>
         <nav>
             <ul class="flex-container" id="navigation">
                 <li>
