Add sticky position to nav-bar and apply across all pages

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <!-- logo, image and tagline -->
+    <!-- logo, image and tagline -->   
     <header>
         <div class="flex-container" id="logo">
             <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
@@ -33,26 +33,26 @@
                 <h2 id="tagline"><em>A social group for parents in Devon</em></h2>
             </div>
         </div>
+    </header>
 
     <!-- navigation bar -->
-        <nav>
-            <ul class="flex-container" id="navigation">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="dates.html">Dates</a>
-                </li>
-                <li>
-                    <a href="support.html">Support</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    
+    <nav id="nav-bar">
+        <ul class="flex-container" id="navigation">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="dates.html">Dates</a>
+            </li>
+            <li>
+                <a href="support.html">Support</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+
     <section>
         <!-- page title -->
         <div class="page-info">
