--- a/dates.html
+++ b/dates.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
+    <!-- logo, image and tagline -->   
     <header>
-        <!-- logo, image and tagline -->
         <div class="flex-container" id="logo">
             <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
             <div class="flex-container" id="logo-text">
@@ -33,25 +33,25 @@
                 <h2 id="tagline"><em>A social group for parents in Devon</em></h2>
             </div>
         </div>
-
-        <!-- navigation bar -->
-        <nav>
-            <ul class="flex-container" id="navigation">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="dates.html">Dates</a>
-                </li>
-                <li>
-                    <a href="support.html">Support</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </nav>
     </header>
+
+    <!-- navigation bar -->
+    <nav id="nav-bar">
+        <ul class="flex-container" id="navigation">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="dates.html">Dates</a>
+            </li>
+            <li>
+                <a href="support.html">Support</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
 
     <section>
         <!-- page title  -->
