--- a/thankyou.html
+++ b/thankyou.html
@@ -22,34 +22,36 @@
 </head>
 
 <body>
-    <!-- logo, image and tagline -->
-    <div class="flex-container" id="logo">
-        <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
-        <div class="flex-container" id="logo-text">
-            <h1 id="logo-name">
-                <a href="index.html">Mama & Cub</a>
-            </h1>
-            <h2 id="tagline"><em>A social group for parents in Devon</em></h2>
+    <!-- logo, image and tagline -->   
+    <header>
+        <div class="flex-container" id="logo">
+            <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
+            <div class="flex-container" id="logo-text">
+                <h1 id="logo-name">
+                    <a href="index.html">Mama & Cub</a>
+                </h1>
+                <h2 id="tagline"><em>A social group for parents in Devon</em></h2>
+            </div>
         </div>
-    </div>
+    </header>
 
     <!-- navigation bar -->
-            <ul class="flex-container" id="navigation">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="dates.html">Dates</a>
-                </li>
-                <li>
-                    <a href="support.html">Support</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <nav id="nav-bar">
+        <ul class="flex-container" id="navigation">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="dates.html">Dates</a>
+            </li>
+            <li>
+                <a href="support.html">Support</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
 
     <!-- page information -->
     <section class="page-info">
