--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
+    <!-- logo, image and tagline -->   
     <header>
-        <!-- logo, image and tagline -->
         <div class="flex-container" id="logo">
             <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
             <div class="flex-container" id="logo-text">
@@ -33,26 +33,27 @@
                 <h2 id="tagline"><em>A social group for parents in Devon</em></h2>
             </div>
         </div>
-
-        <!-- navigation bar -->
-        <nav>
-            <ul class="flex-container" id="navigation">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="dates.html">Dates</a>
-                </li>
-                <li>
-                    <a href="support.html">Support</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </nav>
     </header>
 
+    <!-- navigation bar -->
+    <nav id="nav-bar">
+        <ul class="flex-container" id="navigation">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="dates.html">Dates</a>
+            </li>
+            <li>
+                <a href="support.html">Support</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    
+    
     <!-- top section with next meet up info -->
     <section class="flex-container" id="top-section">
         <img id="top-image" src="assets/images/girl-dollhouse.jpg" alt="A little girl smiles at the camera with her fists raised up in the air to show she is having fun. She is in a room with toys on a desk in front of her">
