Amend text in cost of one of date blocks to match others

--- a/dates.html
+++ b/dates.html
@@ -139,7 +139,7 @@
                 <p>Our regular monthly meet ups are back! Join us at the Playtime Cafe<br>
                     in Exeter on Tuesday morning</p>
                 <p>£1 per child</p>
-                <p>Pre-booking advised as numbers are quite limited</p>
+                <p>Pre-booking advised</p>
                 <div class="icon-item">
                     <img class="activity-button" src="assets/images/icon-images/costbutton-one.png" alt="circular stamp style image with one £">
                 </div>
