Replace jpgs and pngs with webp files for better performance, and update links throughout

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <!-- logo, image and tagline -->   
     <header>
         <div class="flex-container" id="logo">
-            <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
+            <img id="logo-image" src="assets/images/bear-logo.webp" alt="black and white drawing of a teddy bear">
             <div class="flex-container" id="logo-text">
                 <h1 id="logo-name">
                     <a href="index.html">Mama & Cub</a>
