--- a/dates.html
+++ b/dates.html
@@ -25,7 +25,7 @@
     <!-- logo, image and tagline -->   
     <header>
         <div class="flex-container" id="logo">
-            <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
+            <img id="logo-image" src="assets/images/bear-logo.webp" alt="black and white drawing of a teddy bear">
             <div class="flex-container" id="logo-text">
                 <h1 id="logo-name">
                     <a href="index.html">Mama & Cub</a>
@@ -71,7 +71,7 @@
                 <p>Free of charge</p>
                 <p>No booking required</p>
                 <div class="icon-item">
-                    <img class="activity-button" src="assets/images/icon-images/freebutton.png" alt="circular stamp style image with the word free">
+                    <img class="activity-button" src="assets/images/cost-icon-free.webp" alt="circular stamp style image with the word free">
                 </div>
             </div>
 
@@ -82,7 +82,7 @@
                 <p>£2.50 per child accompanied by 1 adult</p>
                 <p>Pre-booking advised</p>
                 <div class="icon-item">
-                    <img class="activity-button" src="assets/images/icon-images/costbutton-two.png" alt="circular stamp style image with two £">
+                    <img class="activity-button" src="assets/images/cost-icon-two.webp" alt="circular stamp style image with two £">
                 </div>
             </div>  
 
@@ -93,7 +93,7 @@
                 <p>£5.75 per child for 1-9 year olds (under 12 months FREE) accompanied by 1 adult</p>
                 <p>Pre-booking advised</p>
                 <div class="icon-item">
-                    <img class="activity-button" src="assets/images/icon-images/costbutton-three.png" alt="circular stamp style image with three £">
+                    <img class="activity-button" src="assets/images/cost-icon-three.webp" alt="circular stamp style image with three £">
                 </div>
             </div>
 
@@ -105,7 +105,7 @@
                 <p>£1 per child</p>
                 <p>Pre-booking advised</p>
                 <div class="icon-item">
-                    <img class="activity-button" src="assets/images/icon-images/costbutton-one.png" alt="circular stamp style image with one £">
+                    <img class="activity-button" src="assets/images/cost-icon-one.webp" alt="circular stamp style image with one £">
                 </div>
             </div>
 
@@ -117,7 +117,7 @@
                     aria-label="visit Haldon Forest website (opens in new tag)">Haldon Forest website</a> for parkng charges</p>
                 <p>No booking required</p>
                 <div class="icon-item">
-                    <img class="activity-button" src="assets/images/icon-images/freebutton.png" alt="circular stamp style image with the word free">
+                    <img class="activity-button" src="assets/images/cost-icon-free.webp" alt="circular stamp style image with the word free">
                 </div>
             </div>
 
@@ -129,7 +129,7 @@
                 <p>£1 per child</p>
                 <p>Pre-booking advised</p>
                 <div class="icon-item">
-                    <img class="activity-button" src="assets/images/icon-images/costbutton-one.png" alt="circular stamp style image with one £">
+                    <img class="activity-button" src="assets/images/cost-icon-one.webp" alt="circular stamp style image with one £">
                 </div>
             </div>
 
@@ -141,7 +141,7 @@
                 <p>£1 per child</p>
                 <p>Pre-booking advised</p>
                 <div class="icon-item">
-                    <img class="activity-button" src="assets/images/icon-images/costbutton-one.png" alt="circular stamp style image with one £">
+                    <img class="activity-button" src="assets/images/cost-icon-one.webp" alt="circular stamp style image with one £">
                 </div>
             </div>
 
@@ -152,7 +152,7 @@
                 <p>Free of charge</p>
                 <p>No booking required</p>
                 <div class="icon-item">
-                    <img class="activity-button" src="assets/images/icon-images/freebutton.png" alt="circular stamp style image with the word free">
+                    <img class="activity-button" src="assets/images/cost-icon-free.webp" alt="circular stamp style image with the word free">
                 </div>
             </div>
 
@@ -164,7 +164,7 @@
                 <p>£1 per child</p>
                 <p>Pre-booking advised</p>
                 <div class="icon-item">
-                    <img class="activity-button" src="assets/images/icon-images/costbutton-one.png" alt="circular stamp style image with one £">
+                    <img class="activity-button" src="assets/images/cost-icon-one.webp" alt="circular stamp style image with one £">
                 </div>
             </div>
 
@@ -176,7 +176,7 @@
                 <p>£1 per child</p>
                 <p>Pre-booking advised</p>
                 <div class="icon-item">
-                    <img class="activity-button" src="assets/images/icon-images/costbutton-one.png" alt="circular stamp style image with one £">
+                    <img class="activity-button" src="assets/images/cost-icon-one.webp" alt="circular stamp style image with one £">
                 </div>
             </div>
 
@@ -188,7 +188,7 @@
                 <p>£1 per child</p>
                 <p>Pre-booking advised</p>
                 <div class="icon-item">
-                    <img class="activity-button" src="assets/images/icon-images/costbutton-one.png" alt="circular stamp style image with one £">
+                    <img class="activity-button" src="assets/images/cost-icon-one.webp" alt="circular stamp style image with one £">
                 </div>
             </div>
             
@@ -199,7 +199,7 @@
                 <p>Free of charge</p>
                 <p>No booking required</p>
                 <div class="icon-item">
-                    <img class="activity-button" src="assets/images/icon-images/freebutton.png" alt="circular stamp style image with the word free">
+                    <img class="activity-button" src="assets/images/cost-icon-free.webp" alt="circular stamp style image with the word free">
                 </div>
             </div>
         </div>
