--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- logo, image and tagline -->   
     <header>
         <div class="flex-container" id="logo">
-            <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
+            <img id="logo-image" src="assets/images/bear-logo.webp" alt="black and white drawing of a teddy bear">
             <div class="flex-container" id="logo-text">
                 <h1 id="logo-name">
                     <a href="index.html">Mama & Cub</a>
@@ -56,7 +56,7 @@
     
     <!-- top section with next meet up info -->
     <section class="flex-container" id="top-section">
-        <img id="top-image" src="assets/images/girl-dollhouse.jpg" alt="A little girl smiles at the camera with her fists raised up in the air to show she is having fun. She is in a room with toys on a desk in front of her">
+        <img id="top-image" src="assets/images/girl-playroom.webp" alt="A little girl smiles at the camera with her fists raised up in the air to show she is having fun. She is in a room with toys on a desk in front of her">
         <div class="flex-container" id="top-text">
             <h2>Join us at our next meet up</h2>
             <div class="flex-container" id="meet-ups">
@@ -87,7 +87,7 @@
             <p id="last-paragraph">If you have an activity or location that would make a great meet up please get in touch</p>
             <a class="button middle-button" href="contact.html">Make a suggestion!</a>
         </div>
-        <img id="middle-image" src="assets/images/play.jpg" alt="Children's wooden alphabet blocks spell out the word 'play' with each letter appearing on an individual block in a different colour">
+        <img id="middle-image" src="assets/images/play.webp" alt="Children's wooden alphabet blocks spell out the word 'play' with each letter appearing on an individual block in a different colour">
     </section>
 
     <!-- lower section with glimpse at support resource info -->
@@ -106,7 +106,7 @@
             </ul>
             <a class="button lower-button" href="support.html">Find out more</a>
         </div>
-        <img id="lower-image" src="assets/images/toddlers-blocks.jpg" alt="A young girl in a red dress builds a tower of blocks with a little boy dressed in green dungarees. They are sat on the floor playing with the blocks">
+        <img id="lower-image" src="assets/images/toddlers-playing.webp" alt="A young girl in a red dress builds a tower of blocks with a little boy dressed in green dungarees. They are sat on the floor playing with the blocks">
     </section>
 
     <!-- footer -->
