--- a/thankyou.html
+++ b/thankyou.html
@@ -25,7 +25,7 @@
     <!-- logo, image and tagline -->   
     <header>
         <div class="flex-container" id="logo">
-            <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
+            <img id="logo-image" src="assets/images/bear-logo.webp" alt="black and white drawing of a teddy bear">
             <div class="flex-container" id="logo-text">
                 <h1 id="logo-name">
                     <a href="index.html">Mama & Cub</a>
@@ -55,7 +55,7 @@
 
     <!-- page information -->
     <section class="page-info">
-        <img id=thank-you-image src="assets/images/little-girl-phone.jpg" alt="a little girl dressed in a blue ballet outfit and wearing ballet shoes sits cross-legged on a desk playing with a mobile phone">
+        <img id=thank-you-image src="assets/images/girl-mobile-phone.webp" alt="a little girl dressed in a blue ballet outfit and wearing ballet shoes sits cross-legged on a desk playing with a mobile phone">
         <h1>Thank you for getting in touch!</h1>
         <p>Your message has been successfully submitted and we'll be back in touch with you shortly!</p> 
     </section>
