--- a/support.html
+++ b/support.html
@@ -25,7 +25,7 @@
     <!-- logo, image and tagline -->   
     <header>
         <div class="flex-container" id="logo">
-            <img id="logo-image" src="assets/images/bearlogo.png" alt="black and white drawing of a teddy bear">
+            <img id="logo-image" src="assets/images/bear-logo.webp" alt="black and white drawing of a teddy bear">
             <div class="flex-container" id="logo-text">
                 <h1 id="logo-name">
                     <a href="index.html">Mama & Cub</a>
@@ -64,7 +64,7 @@
 
     <!-- breastfeeding support section -->
     <section class="flex-container support-section">
-        <img src="assets/images/breastfeeding.jpg" alt="A black and white photo of a woman wearing jeans and a t-shirt sitting on a stool and breastfeeds her young baby">
+        <img src="assets/images/breastfeeding-muma.webp" alt="A black and white photo of a woman wearing jeans and a t-shirt sitting on a stool and breastfeeds her young baby">
         <div class="flex-container support-text">
             <h2>Breastfeeding Support</h2>
             <p>Breastfeeding can come easily to some and be more difficult for others. Your first child might take to it immediately and your next might struggle. Whatever your journey may hold there are a lot of support resources and groups available to help you.</p>
@@ -84,7 +84,7 @@
 
     <!-- mental health support section -->
     <section class="flex-container support-section" id="mental-health">
-        <img src="assets/images/woman-heart.jpg" alt="A woman makes a heart shape with her hands in front of the setting sun">
+        <img src="assets/images/heart-hands-muma.webp" alt="A woman makes a heart shape with her hands in front of the setting sun">
         <div class="flex-container support-text">
             <h2>Mental Health Support</h2>
             <p>Did you know that the <a href="https://www.nhs.uk/mental-health/conditions/post-natal-depression/overview/" target="_blank" rel="noopener" aria-label="visit NHS postnatal depression website (opens in new tag)">NHS reports</a> more than 1 in every 10 women experience postnatal depression within a year of giving birth?</p>
@@ -104,7 +104,7 @@
 
     <!-- mindfulness and wellbeing support section -->
     <section class="flex-container support-section">
-        <img src="assets/images/meditationmum.jpg" alt="A mother and her two children sit next to eachother on a floor meditating. They are sitting in a burmese position with legs crossed and are in a big bright room">
+        <img src="assets/images/meditating-muma.webp" alt="A mother and her two children sit next to eachother on a floor meditating. They are sitting in a burmese position with legs crossed and are in a big bright room">
         <div class="flex-container support-text">
             <h2>Mindfulness and Wellbeing</h2>
             <p>It is so important to look after yourself. Practicing mindfulness can help us avoid becoming overwhelmed and to be more present in the moment. It can help us relax, sleep, and manage our feelings in a more gentle way.</p>
